--- a/presentation.qmd
+++ b/presentation.qmd
@@ -18,17 +18,51 @@ format:
 
 ![](www/r-is-dead-linkedin-post.png)
 
+::: {.notes}
+
+- This is a LinkedIn post that was making the rounds a few months ago; I'm sure maybe even a few of you saw it.
+- It got a lot of buzz online
+- My experience is a little bit different
+
+:::
+
 ## The Reality
 
-> Amost everything that used to make Python awesome that wasn't in R has been since ported over to R. And everything that used to make R awesome that wasn't in Python has been since ported over to Python.
+> Amost everything that used to make Python awesome that wasn't in R has been since ported over to R.
 
-## Strengths & Weaknesses
+> And everything that used to make R awesome that wasn't in Python has been since ported over to Python.
 
-- {shiny} ecosystem in R
-    + {shinyWidgets}
-    + {echarts4r}
+## Why Have a Multilingual Team?
 
-- Vast size of {python} package ecosystem
+- Larger potential talent pool
+- More tools in the toolbox
+- Dual offering
+
+::: {.notes}
+
+- If all of the good stuff is in both languages, then why not just pick one?
+- If you're looking for good data science candidates to build yoru team out, limiting your search to only candidates who know one language or the other can slow your hiring process
+- Once in awhile, I *will* run into a problem I'm trying to solve where one language has the perfect package and the other doesn't
+- Lastly, I work at a consulting firm, and the fact that we can offer our clients the option to *choose* the language they want us to build the solution in is huge
+
+:::
+
+## The Key to a Great Multilingual Data Science Team
+
+**EMPATHY**
+
+::: {.notes}
+
+- So this is going to sound non-technical, but I've found that the key to making multilingual data science teams work is an extra does of empathy
+- I'd argue that this is important in *any* data science team, but especially so for teams using R & Python
+
+:::
+
+## How Empathy Manifests Technically
+
+1. Environment management
+1. Package choices
+1. Documentation
 
 ## Keys
 
@@ -86,6 +120,7 @@ format:
 * Use DuckDB!
     + Also, if you didn't know it, you can write SQL in polars 🤯
 * Use {great-tables} (Python) or {GT} (R)
+* Use {plotnine} (Python) or {ggplot2} (R)
 * Comment comment comment
 * If you're coming from Python and working with an R team that doesn't have a lot of OOP experience (I'd argue that R is used more as a  functional programming language than it is an OOP language), you may want to avoid OOP when a functional approach is just as good
 
