--- a/presentation.qmd
+++ b/presentation.qmd
@@ -105,18 +105,22 @@ format:
 
 ## Environment Management {transition="none"}
 
+<br>
+
 > *"It works on my machine"*
 
 ::: {.notes}
 
 * "It works on my machine"
-    + Still lots of folks out there dealing with this day in & day out
-    + Also people that don't care -- because they are essentially a lone wolf
+    + There are still lots of folks out there dealing with this day in & day out
+    + There are also people that don't care -- because they are essentially a lone wolf
         + I still think these people should care about this... it's a short-sighted approach
 
 :::
 
 ## Environment Management {transition="none"}
+
+<br>
 
 ::: {.incremental}
 
@@ -137,39 +141,45 @@ format:
 
 ## Environment Management {transition="none"}
 
-::: {.incremental}
+<br>
 
-- Third-party tools:
-    + Posit Workbench
+::: {.columns}
+::: {.column}
+
+**Operating System & Python/R Version**
 
 <br>
 
+- Third-party tools:
+    + Posit Workbench
 - Open Source tools:
     + Containers (Docker / Podman)
     + Nix
 
 :::
+::: {.column}
+
+**Package Version**
+
+- Python
+    + `uv`, `venv`, etc.
+- R
+    + {renv}
+
+:::
+:::
 
 ::: {.notes}
 
-* There are three best approaches to doing this < read slide >
-* Going the open source approach requires some DevOps skillsets
+- On the Operating System & Python/R Version side, you can typically use the same tooling for both
+- There are three best approaches to doing this < read slide >
+- Going the open source approach requires some DevOps skillsets
     + Need to ask yourself if that's something you want to undertake or not
     + Cost / benefit of 3rd party tools (not saying Posit tooling doesn't have another million incredible features -- I'm just looking at this from an environment management standpoint)
+- On the package versioning side, using *virtual environments* which allow you to manage package versions on a project-by-project basis, instead of having some sort of global library for all projects, can be really efficient for collaboration and ensuring you and the rest of your team are working within the same setup
+    + I think there are essentially two leaders these days: `uv` on the Python side, and {renv} on the R side
 
 :::
-
-<!-- ## Git-Based SDLC Workflow
-
-* Need to be using git -- I'm not going to spend my time today trying to convince you of that -- there's way more folks out there who can articulate that argument better than I can; but let's assume you are
-* Protected `main` branch
-* A commit to `main` triggers the process to run
-    + Or it's a scheduled cron job
-* A commit to a `dev` branch may run checks and tests
-    + Even better, you can only merge the `dev` branch into `main` if you have passed all those checks
-* New features / bugs present as "Issues" in the repository
-* Issues become PRs
-* PRs get reviewed and merged -->
 
 ## Package Choices
 
@@ -177,6 +187,7 @@ format:
 
 ::: {.notes}
 
+- We just talked about package versions, but let's talk about choosing which package to use at all -- this is pillar number 2
 - Here's the question I'm always asking myself
 - The choice of packages you use is the second thing that can really drive success for an effective multilingual team
 
@@ -294,14 +305,16 @@ result = conn.execute(query).df()
 
 ::: {.notes}
 
-* Use {great-tables} (Python) or {GT} (R)
-* Use {plotnine} (Python) or {ggplot2} (R)
-* Comment comment comment
-* If you're coming from Python and working with an R team that doesn't have a lot of OOP experience (I'd argue that R is used more as a  functional programming language than it is an OOP language), you may want to avoid OOP when a functional approach is just as good
+- In each language, there's a bit of setup in the front (to connect to the database) and some small syntactic differences at the end of the script -- but everything in the middle is SQL!  The middle of your code should be almost exactly identical regardless of which language you're using -- SQL will not die
+- Other similar package comparisons:
+    + Use {great-tables} (Python) or {GT} (R)
+    + Use {plotnine} (Python) or {ggplot2} (R)
+- **Comment, comment, comment** your code (talking about inline comments; we'll talk about other types of documentation shortly)
+- Lastly, if you're coming from Python and working with an R team that doesn't have a lot of OOP experience (I'd argue that R is used more as a  functional programming language than it is an OOP language), you may want to avoid OOP when a functional approach is just as good
 
 :::
 
-## Documentation
+<!-- ## Documentation
 
 * Docstrings / Roxygen should be structured similarly
 * Quarto!
@@ -311,26 +324,65 @@ result = conn.execute(query).df()
     + This can be hard in a fast-paced environment with tight deadlines, but it will *save* you time in the long run (assuming you're actually taking the time to review)
 * Mermaidjs
 
+- Docstrings / Roxygen
+- GitHub Workflow (SDLC)
+- `README` standardization -->
 
+## Documentation
 
+<br>
 
+![](www/git-sdlc.png)
 
+::: {.notes}
 
-## Communication
+- Let's move on to the last pillar of an effective multilingual data science team: Documentation
+- If you're on a data science team, there are probably a few different approaches to how you could structure collaborative workflows when working on projects together.
+- I'm going to show our current approach, which I believe is not only ours, but a similar workflow to what's in place at other organizations we've seen, including Posit
+- First, a user or developer identifies a bug in the software or comes up with an enhancement that we've agreed to implement
+- They write up their idea in a detailed "issue"
+- The first step in working on that is to create a new git *branch* in the repository specifically for the purpose of addressing that "issue"
+- Then they go off and write or modify the code that fixes the bug or adds the enhancement
+- And once they feel like the updated code is in a good spot, they can write up a Pull Request (or "PR") that details how they addressed the issue, what changed, and more
 
-* Use Slack not Teams (I'm kidding -- kind of)
-* Empathy for the reviewer / other team member
-    + Document document document
-* Staying on top of the latest & greatest
-    + If you find a great new package, don't just start using it in a current or new project where other team members are involved; tell them about it first, and make the case for switching to it (and get everyone on board -- it should be a democracy) before actually switching to it
-* Empathy in general
-    + Our team is actually international -- there are folks for whom English is their second language; the idiosynchracies that exist within each of our native languages can lead to someone saying something that may be interpreted as incorrect or even offensive -- make sure you figure out what their intention was with that statement before reacting
+:::
+
+## Documentation
+
+![](www/good-issue.mp4)
+
+## Final Thoughts
+
+<br>
+
+![](www/final-thoughts.png)
+
+::: {.notes}
+
+- Empathy mindset; put yourself in the shoes of the reviewer or other team members that may be looking at your code
+- Our team is actually multinlingual not just from a programming language perspective, but also from a spoken language perspective -- there are folks for whom English is their second language; the idiosynchracies that exist within each of our native languages can lead to someone saying something that may be interpreted as incorrect or even offensive -- make sure you figure out what their intention was with that statement before reacting
     + If you're on the other side of that, make sure you're using language that's as straightforward as possible, or preface what you want to say with something like "I don't know if I'm saying this right..."
-    + This can be just as much the case with 2 individuals who are both native English speakers
+    + Sometimes this can be just as much the case, or just as important, with 2 individuals who are both native English speakers
+
+:::
 
 <!-- ### Feedback
 
 - Add some visual cues that make it obvious to separate 3rd party environment management tooling () and open source tooling
 - Don't need to
 - Can we pull out any stories?
-- Put a Minimum Reproducible Example in your issues!! -->
+- Put a Minimum Reproducible Example in your issues!!
+
+- Add examples
+
+- "In the pillar of Package Choices, empathy means syntax similarity for easy code review"
+    + Do this for all pillars
+
+- "In a talk where we're discussing how to try and bridge the worlds of Python and R, we can't even agree on whether we should use the term 'Multilingual' or 'Polyglot'
+
+- Add examples of {ggplot2}/{plotnine} and {GT}/{great-tables}
+
+
+-->
+
+-
